--- a/error.ui
+++ b/error.ui
@@ -39,7 +39,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>erro.png</pixmap>
+     <pixmap>imgs/erro.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
