--- a/fourth.ui
+++ b/fourth.ui
@@ -45,7 +45,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>espelho.png</pixmap>
+     <pixmap>imgs/espelho.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
