--- a/maçaneta.ui
+++ b/maçaneta.ui
@@ -42,7 +42,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>chave.png</pixmap>
+     <pixmap>imgs/chave.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
